poll results: view and template

--- a/polls_app/templates/polls_app/index.html
+++ b/polls_app/templates/polls_app/index.html
@@ -12,7 +12,7 @@
 {% if polls_list %}
     <ul>
     {% for poll in polls_list %}
-        <li><a href="/polls/{{ poll.id }}/">{{ poll.poll_name }}</a></li>
+        <li><a href="{% url 'polls_app:poll_detail' poll.id %}">{{ poll.poll_name }}</a></li>
     {% endfor %}
     </ul>
 {% else %}
